--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -12,12 +12,12 @@
             flex: 1;
             &:hover {
                 background: white;
-
             }
             &.active {
                 background: white;
                 border-left: 1px solid #333;
                 border-right: 1px solid #333;
+                outline: none;
             }
         }
     }
